add repourl, path, email to deployment status
